<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">USB Tether Widget</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="usb_connectoin_status">USB Connection</string>
    <string name="tething_capability">Tethering</string>
    <string name="staus_enabled">Enabled</string>
    <string name="status_disabled">Disabled</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="contentdesc_widgetmain">Turn on/off USB Teathering connection</string>
    <string name="status_valid">Valid</string>
    <string name="status_invalid">Invalid</string>
    <string name="wifi_control">Wi-Fi Control</string>
    <string name="wimax_control">WiMAX control</string>
    <string name="separator_colong"> : </string>
    <string name="banner_current_status">Current Status</string>
    <string name="software_version">Software Version : </string>
    <string name="summary_wifi_cotrol_on">Turn off Wi-Fi before starting Tethering</string>
    <string name="summary_wifi_control_off">Don\'t care device\'s Wi-Fi setting</string>
    <string name="summary_wimax_control_on">Turn on WiMAX before starting Tethering</string>
    <string name="summary_wimax_control_off">Don\'t care device\'s WiMAX settings</string>
    <string name="status_unknown">Unknown</string>

</resources>